--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
     <script>
         async function predict() {
             const emailText = document.getElementById('emailInput').value;
-            const response = await fetch('https://emailspamham-1.azurewebsites.net/predict', {
+            const response = await fetch('https://emailspamham-1-hea6f7d6hecpa4fv.canadacentral-01.azurewebsites.net/predict', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ text: emailText })
